Rare INCOMPATIBILITY, need to refer to explicitly named facts instead
(e.g. use 'find_theorems' or 'try' to figure this out).

* Rewrites clauses (keyword 'rewrites') were moved into the locale
expression syntax, where they are part of locale instances.  Keyword
'for' now needs to occur after, not before 'rewrites'.
Minor INCOMPATIBILITY.


*** Pure ***

* The inner syntax category "sort" now includes notation "_" for the
dummy sort: it is effectively ignored in type-inference.


*** HOL ***

* Clarifed theorem names:

  Min.antimono ~> Min.subset_imp
  Max.antimono ~> Max.subset_imp

Minor INCOMPATIBILITY.

* A new command parametric_constant for proving parametricity of
non-recursive definitions. For constants that are not fully parametric
the command will infer conditions on relations (e.g., bi_unique,
bi_total, or type class conditions such as "respects 0") sufficient for
parametricity. See ~~/src/HOL/ex/Conditional_Parametricity_Examples for
some examples.

* SMT module:
  - The 'smt_oracle' option is now necessary when using the 'smt' method
    with a solver other than Z3. INCOMPATIBILITY.
  - The encoding to first-order logic is now more complete in the
    presence of higher-order quantifiers. An 'smt_explicit_application'
    option has been added to control this. INCOMPATIBILITY.

* Datatypes:
  - The legacy command 'old_datatype', provided by
    '~~/src/HOL/Library/Old_Datatype.thy', has been removed. INCOMPATIBILITY.

* Theory HOL-Computational_Algebra.Polynomial_Factorial does not provide
instances of rat, real, complex as factorial rings etc. Import
HOL-Computational_Algebra.Field_as_Ring explicitly in case of need.
INCOMPATIBILITY.

* Fact mod_mult_self4 (on nat) renamed to mod_mult_self3', to avoid
clash with fact mod_mult_self4 (on more generic semirings).
INCOMPATIBILITY.

* Facts sum.commute(_restrict) and prod.commute(_restrict) renamed to
sum.swap(_restrict) and prod.swap(_restrict), to avoid name clashes on